--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -1,6 +1,6 @@
 
-load_module /usr/lib/nginx/modules/ndk_http_module.so;
-load_module /usr/lib/nginx/modules/ngx_http_lua_module.so;
+#load_module /usr/lib/nginx/modules/ndk_http_module.so;
+#load_module /usr/lib/nginx/modules/ngx_http_lua_module.so;
 
 pcre_jit on;
 
