--- a/docker-compose-shared-services.yml
+++ b/docker-compose-shared-services.yml
@@ -1,24 +1,6 @@
 version: "3.7"
 
 services:
-#  postgres:
-#    container_name: postgres_db
-#    image: postgres:13-alpine
-#    networks:
-#      - redirect-backend
-#    environment:
-#      POSTGRES_USER: "postgres_user"
-#      POSTGRES_PASSWORD: "postgres_pass"
-#    volumes:
-#      - postgres_db:/var/lib/postgresql/data
-#    ports:
-#      - 5432:5432
-#    healthcheck:
-#      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-#      interval: 5s
-#      timeout: 10s
-#      retries: 3
-
   redis_redirect:
     container_name: redis_redirect
     image: redis:alpine
@@ -28,11 +10,11 @@ services:
       - redis_db:/data
     ports:
       - "127.0.0.1:6381:6379"
-#    healthcheck:
-#      test: [ "CMD", "bash", "-c", "exec 3<> /dev/tcp/127.0.0.1/6379 && echo PING >&3 && head -1 <&3 | grep PONG" ]
-#      interval: 5s
-#      timeout: 10s
-#      retries: 5
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 5s
+      timeout: 10s
+      retries: 5
 
 networks:
   redirect-backend:
