--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -3,7 +3,7 @@ server {
   location / {
 
     default_type 'text/html';
-    content_by_lua_file /app/hello.lua;
+    content_by_lua_file /app/redirect.lua;
     #production enabled this setting
     lua_code_cache off;
   }
