--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,5 +1,8 @@
 
 server {
+  location /lua-redirect-redis-fastcgi {
+
+  }
   location / {
 
     default_type 'text/html';
@@ -7,4 +10,35 @@ server {
     #production enabled this setting
     lua_code_cache off;
   }
+
+   #location / {
+       # Redirect everything that isn't a real file to index.php
+   #    try_files $uri $uri/ /index.php$is_args$args;
+   #}
+
+  location ~ \.php$ {
+      if (!-f $request_filename) { return 404; }
+
+      fastcgi_split_path_info ^(.+\.php)(/.+)$;
+      fastcgi_index   index.php;
+
+      # Connect to php-fpm via socket
+      fastcgi_pass php-fpm;
+
+      fastcgi_connect_timeout     300s;
+      fastcgi_read_timeout        300s;
+      fastcgi_send_timeout        300s;
+      fastcgi_ignore_client_abort on;
+      fastcgi_pass_header         "X-Accel-Expires";
+
+      fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+      fastcgi_param  PATH_INFO        $fastcgi_path_info;
+      fastcgi_param  HTTP_REFERER     $http_referer;
+      include fastcgi_params;
+  }
+
+  upstream php-fpm {
+      server php:9000;
+  }
+
 }
