run with php7.4

--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,20 +1,74 @@
 
 server {
+  listen 80;
+  server_name redirect.local;
+  server_tokens off;
+  client_max_body_size 8M;
+  charset utf-8;
+  root    /app/public;
+  index   index.php;
+
   location /lua-redirect-redis-fastcgi {
+    if (!-f $request_filename) { return 404; }
 
+          fastcgi_split_path_info ^(.+\.php)(/.+)$;
+          fastcgi_index   index.php;
+
+          # Connect to php-fpm via socket
+          fastcgi_pass php-fpm;
+
+          fastcgi_connect_timeout     300s;
+          fastcgi_read_timeout        300s;
+          fastcgi_send_timeout        300s;
+          fastcgi_ignore_client_abort on;
+          fastcgi_pass_header         "X-Accel-Expires";
+
+          fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+          fastcgi_param  PATH_INFO        $fastcgi_path_info;
+          fastcgi_param  HTTP_REFERER     $http_referer;
+          include fastcgi_params;
   }
-  location / {
-
-    default_type 'text/html';
-    content_by_lua_file /app/redirect.lua;
+  #location / {
+  #  default_type 'text/html';
+  #  content_by_lua_file /app/redirect.lua;
     #production enabled this setting
-    lua_code_cache off;
-  }
+  #  lua_code_cache off;
+  #}
 
-   #location / {
+   location / {
+        default_type 'text/html';
+
+        content_by_lua_block {
+            local redis = require "resty.redis"
+            local red = redis:new()
+            local arg = ngx.var.uri
+
+            local uri, _ = arg:gsub("/", "")
+
+            red:set_timeout(1000)
+
+            local ok, err = red:connect("redis_redirect", 6379)
+
+            if not ok then
+                ngx.say("Error: ")
+                ngx.say(err)
+            end
+
+            res, err = red:get("redirect:" .. uri);
+            if res == ngx.null then
+                local res = ngx.location.capture ("/index.php", {args = {uri = ngx.var.uri, args = ngx.var.args}})
+                ngx.say(res.body)
+            else
+                ngx.say(res)
+            end
+        }
+
+       # content_by_lua_file /app/redirect.lua;
+        #production enabled this setting
+        lua_code_cache off;
        # Redirect everything that isn't a real file to index.php
-   #    try_files $uri $uri/ /index.php$is_args$args;
-   #}
+       #try_files $uri $uri/ /index.php$is_args$args;
+   }
 
   location ~ \.php$ {
       if (!-f $request_filename) { return 404; }
@@ -36,9 +90,8 @@ server {
       fastcgi_param  HTTP_REFERER     $http_referer;
       include fastcgi_params;
   }
+}
 
-  upstream php-fpm {
-      server php:9000;
-  }
-
+upstream php-fpm {
+    server redirect_php:9000;
 }
