fix config nginx

--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -8,36 +8,9 @@ server {
   root    /app/public;
   index   index.php;
 
-  location /lua-redirect-redis-fastcgi {
-    if (!-f $request_filename) { return 404; }
-
-          fastcgi_split_path_info ^(.+\.php)(/.+)$;
-          fastcgi_index   index.php;
-
-          # Connect to php-fpm via socket
-          fastcgi_pass php-fpm;
-
-          fastcgi_connect_timeout     300s;
-          fastcgi_read_timeout        300s;
-          fastcgi_send_timeout        300s;
-          fastcgi_ignore_client_abort on;
-          fastcgi_pass_header         "X-Accel-Expires";
-
-          fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-          fastcgi_param  PATH_INFO        $fastcgi_path_info;
-          fastcgi_param  HTTP_REFERER     $http_referer;
-          include fastcgi_params;
-  }
-  #location / {
-  #  default_type 'text/html';
-  #  content_by_lua_file /app/redirect.lua;
-    #production enabled this setting
-  #  lua_code_cache off;
-  #}
-
    location / {
         default_type 'text/html';
-
+        add_header 'X-Redirect' 'redirectByNL';
         content_by_lua_block {
             local redis = require "resty.redis"
             local red = redis:new()
@@ -50,8 +23,8 @@ server {
             local ok, err = red:connect("redis_redirect", 6379)
 
             if not ok then
-                ngx.say("Error: ")
-                ngx.say(err)
+                 local res = ngx.location.capture ("/index.php", {args = {uri = ngx.var.uri, args = ngx.var.args}})
+                 ngx.say(res.body)
             end
 
             res, err = red:get("redirect:" .. uri);
