--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -11,7 +11,11 @@ server {
    location / {
         default_type 'text/html';
         add_header 'X-Redirect' 'redirectByNL';
+        add_header Set-Cookie "Path=/;redirect=true; HttpOnly; Secure";
         content_by_lua_block {
+            local http_port = os.getenv("HTTP_PORT")
+            ngx.say(ngx.var.HTTP_PORT)
+            ngx.say(http_port)
             local redis = require "resty.redis"
             local red = redis:new()
             local arg = ngx.var.uri
