--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       interval: 30s
       timeout: 3s
       retries: 3
+    env_file:
+      - .env
 
   redirect_php:
     container_name: ${APP_COMPOSE_PROJECT_NAME}_php_fpm
