add env to nginx

--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -13,9 +13,9 @@ server {
         add_header 'X-Redirect' 'redirectByNL';
         add_header Set-Cookie "Path=/;redirect=true; HttpOnly; Secure";
         content_by_lua_block {
-            local http_port = os.getenv("HTTP_PORT")
-            ngx.say(ngx.var.HTTP_PORT)
-            ngx.say(http_port)
+            local redis_host = os.getenv("APP_REDIS_HOST")
+            local redis_port = os.getenv("APP_REDIS_PORT")
+
             local redis = require "resty.redis"
             local red = redis:new()
             local arg = ngx.var.uri
@@ -24,7 +24,7 @@ server {
 
             red:set_timeout(1000)
 
-            local ok, err = red:connect("redis_redirect", 6379)
+            local ok, err = red:connect(redis_host, redis_port)
 
             if not ok then
                  local res = ngx.location.capture ("/index.php", {args = {uri = ngx.var.uri, args = ngx.var.args}})
@@ -65,6 +65,14 @@ server {
       fastcgi_param  HTTP_REFERER     $http_referer;
       include fastcgi_params;
   }
+
+  location /env_test {
+     default_type 'text/html';
+      content_by_lua_block {
+      local http_port = os.getenv("HTTP_PORT")
+      ngx.say(http_port)
+      }
+    }
 }
 
 upstream php-fpm {
