--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -10,6 +10,12 @@ events {
 
 daemon off;
 
+env HTTP_PORT;
+
+env APP_REDIS_HOST;
+env APP_REDIS_PORT;
+env APP_REDIS_PASSWORD;
+
 http {
         # zero copy within the kernel
         sendfile on;
