attempt add json to lua by redis

--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -12,33 +12,37 @@ server {
         default_type 'text/html';
         add_header 'X-Redirect' 'redirectByNL';
         add_header Set-Cookie "Path=/;redirect=true; HttpOnly; Secure";
-        content_by_lua_block {
-            local redis_host = os.getenv("APP_REDIS_HOST")
-            local redis_port = os.getenv("APP_REDIS_PORT")
+        content_by_lua_file /app/redirect.lua;
+        #content_by_lua_block {
+        #    local redis_host = os.getenv("APP_REDIS_HOST")
+        #    local redis_port = os.getenv("APP_REDIS_PORT")
 
-            local redis = require "resty.redis"
-            local red = redis:new()
-            local arg = ngx.var.uri
+        #    local redis = require "resty.redis"
 
-            local uri, _ = arg:gsub("/", "")
+        #    local red = redis:new()
+        #    local arg = ngx.var.uri
 
-            red:set_timeout(1000)
+        #    local uri, _ = arg:gsub("/", "")
 
-            local ok, err = red:connect(redis_host, redis_port)
+        #    red:set_timeout(1000)
 
-            if not ok then
-                 local res = ngx.location.capture ("/index.php", {args = {uri = ngx.var.uri, args = ngx.var.args}})
-                 ngx.say(res.body)
-            end
+        #    local ok, err = red:connect(redis_host, redis_port)
 
-            res, err = red:get("redirect:" .. uri);
-            if res == ngx.null then
-                local res = ngx.location.capture ("/index.php", {args = {uri = ngx.var.uri, args = ngx.var.args}})
-                ngx.say(res.body)
-            else
-                ngx.say(res)
-            end
-        }
+        #    if not ok then
+        #         local res = ngx.location.capture ("/index.php", {args = {uri = ngx.var.uri, args = ngx.var.args}})
+        #         ngx.say(res.body)
+        #    end
+
+        #    res, err = red:get("redirect:" .. uri);
+        #    if res == ngx.null then
+        #        local res = ngx.location.capture ("/index.php", {args = {uri = ngx.var.uri, args = ngx.var.args}})
+        #        ngx.say(res.body)
+        #    else
+        #        local values = { 'value1', 'value2', 'value3' }
+        #        red:rpush('list', unpack(values))
+        #        ngx.say(res)
+        #    end
+        #}
         #production enabled this setting
         lua_code_cache off;
        # Redirect everything that isn't a real file to index.php
