--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "require": {
         "ext-pdo": "*",
-        "jtrw/dao": "^3.0"
+        "jtrw/dao": "^3.0",
+        "cache/redis-adapter": "^1.1",
+        "ext-redis": "*"
     },
     "autoload": {
         "psr-4": {
